--- a/package.json
+++ b/package.json
@@ -5,13 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"nodemon\" \"nodemon -x tsoa spec\"",
+    "dev": "concurrently \"nodemon\"",
     "build": "tsc",
     "start": "node index.ts",
-    "build:swagger": "ts-node ./src/swagger.ts",
-    "swagger": "tsoa spec",
-    "predev": "npm run swagger",
-    "prebuild": "npm run swagger"
+    "build:swagger": "ts-node ./src/swagger.ts"
   },
   "keywords": [],
   "author": "",
@@ -31,6 +28,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "swagger-autogen": "^2.23.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "tsoa": "^6.2.1"
