--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,5 +105,10 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": ["src/swagger-output.json", "src/**/*"],
+  "exclude": ["node_modules"],
+  "lib": ["es2015"],
+  "typeRoots": ["node_modules/@types"],
+  "types": ["node", "express"]
 }
